Footer & header: fix img not showing up issue in doc site

--- a/packages/ds/web/src/components/djl-footer/djl-footer.scss
+++ b/packages/ds/web/src/components/djl-footer/djl-footer.scss
@@ -11,8 +11,12 @@
     display: grid;
     @include layout-grid.grid(max-content auto, auto);
     * {grid-column: auto / span 1};
-    
+
     align-items: center;
+
+    img {
+      max-width: 295px;
+    }
   }
 
   .item1 {
